--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
     "@mui/styled-engine-sc": "^5.12.0",
+    "framer-motion": "^10.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.15.0",
     "styled-components": "^5.3.11"
   },
