--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,10 @@
     "framer-motion": "^10.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.15.0",
+    "react-scroll": "^1.8.9",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
