--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
     "react-scroll": "^1.9.0"
   },
